# Gerbot

./: Cargo.toml  Dockerfile
.devcontainer/: devcontainer.json
.github/workflows/: publish-container.yml
src/: main.rs  metadata.rs  music_commands.rs  serde.rs  yt_api.rs  yt_search.rs
src/youtube/: mod.rs  yt_api.rs
