[package]
name = "gerbot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = "0.12"
poise = "0.6.1"
songbird = { version = "0.4.3", features = ["builtin-queue"] }

# reqwest 0.11 required for songbird
reqwest = { version = "0.11", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

time = { version = "0.3", features = ["serde-well-known"] }
lazy_static = "1"
thiserror = "1"

tokio = { version = "1.39", features = ["macros", "rt-multi-thread"] }
env_logger = "*"
log = "*"

# Only for enabling codec support in songbird
symphonia = { version = "*", features = ["aac", "mp3", "isomp4", "alac", "flac"]}
