[package]
name = "gerbot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = "0.12"
poise = "0.6.1"
songbird = { version = "0.4.5", features = ["builtin-queue"] }

# reqwest 0.11 required for songbird
reqwest = { version = "0.11", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }

time = { version = "0.3", features = ["serde-well-known"] }
thiserror = "2"

tokio = { version = "1.39", features = ["macros", "rt-multi-thread"] }
rand = "0.9.0"
env_logger = "*"
log = "*"

# Only for enabling codec support in songbird
symphonia = { version = "*", features = ["aac", "mp3", "isomp4", "alac", "flac"]}
