[package]
name = "gerbot"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = "0.12.4"
poise = "0.6.1"
songbird = { version = "0.5.0", features = ["builtin-queue"] }

reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }

time = { version = "0.3", features = ["serde-well-known"] }
thiserror = "2"

tokio = { version = "1.43", features = ["macros", "rt-multi-thread"] }
rand = "0.9"
env_logger = "*"
log = "*"

# Only for enabling codec support in songbird
symphonia = { version = "*", features = ["aac", "mp3", "isomp4", "alac", "flac"]}
